# poc-zmq-interfaces

./: Dockerfile  docker-compose.yml  pyproject.toml
poc/services/: sink_sub.py  source_pub.py
